--- a/sending email using django/sending_email/templates/success.html
+++ b/sending email using django/sending_email/templates/success.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Failed</title>
-  </head>
-  <body>
-    <h1>Email Sent</h1>
-    <a href="{% url 'home' %}">Sending Another Email</a>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Success</title>
+</head>
+
+<body>
+  <h1>Email Sent</h1>
+  <a href="{% url 'home' %}">Sending Another Email</a>
+</body>
+
 </html>
