--- a/Try django-simple-history/books/templates/books/book_list.html
+++ b/Try django-simple-history/books/templates/books/book_list.html
@@ -5,6 +5,7 @@
             {{ book.title }} by {{ book.author }} (Published: {{ book.published_date }})
             <a href="{% url 'edit_book' book.pk %}">Edit</a> | 
             <a href="{% url 'delete_book' book.pk %}">Delete</a>
+            | <a href="{% url 'book_history' book.pk %}">History</a>
         </li>
     {% endfor %}
 </ul>
